# codeflex-python

./: README.md  jupyterlite_config.json  pyproject.toml  requirements.txt
content/: CodeflexLibrary.ipynb  SQLite.ipynb  codeflexLibrary.ipynb
repl/: jupyter-lite.json
