[tool.poetry]
name = "tld-let-calibration"
version = "0.1.0"
description = ""
authors = ["Leszek Grzanka <leszek.grzanka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.0"
jupyterlab = "^4.0.7"
tqdm = "^4.66.1"
openpyxl = "^3.1.2"
seaborn = "^0.13.0"
lmfit = "^1.2.2"
scipy = "^1.11.3"
codeflex = "^5.1.0"
boto3 = "^1.35.14"
mysql-connector-python = "^8.1.0"

# Más librerías comunes
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
scikit-learn = "^1.3.1"
sqlalchemy = "^2.0.20"
pytest = "^7.4.0"
flask = "^2.3.2"
fastapi = "^0.103.0"
loguru = "^0.7.0"
pillow = "^10.0.0"
cryptography = "^41.0.3"
httpx = "^0.24.1"
lxml = "^4.9.3"
pyyaml = "^6.0.1"
arrow = "^1.2.3"
click = "^8.1.6"
rich = "^13.4.1"
celery = "^5.3.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.10.1"

[tool.poetry.group.deploy.dependencies]
jupyterlite-core = "^0.2.0"
jupyterlite-pyodide-kernel = "^0.2.0"
ipympl = ">=0.8.2"

[tool.black]
line-length = 120
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
